--- a/test/client/test.html
+++ b/test/client/test.html
@@ -27,6 +27,7 @@
     <script src='app.js'></script>
     <script src='user.js'></script>
     <script src='users.js'></script>
+    <script src='messages.js'></script>
     <script src='sendFiles.js'></script>
     <script src='acceptFiles.js'></script>
     <script src='client.js'></script>
@@ -36,6 +37,7 @@
     <script src='testAcceptFiles.js'></script>
     <script src='testUsers.js'></script>
     <script src='testUser.js'></script>
+    <script src='testMessages.js'></script>
 
     <script>
       mocha.run();
