--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,8 @@
     <script type='text/javascript' src='sendFiles.js'></script>
     <script type='text/javascript' src='acceptFiles.js'></script>
     <script type='text/javascript' src='client.js'></script>
+    <script type='text/javascript' src='rightSomethingDirective.js'></script>
+    <script type='text/javascript' src='fileUploadDirective.js'></script>
 
     <link rel='stylesheet' type='text/css' href='index.css' />
 
@@ -34,7 +36,7 @@
             <div><input type='text' ng-model='text' name='text'/ autocomplete='off'></div>
             <input id='thirdSomething' type='submit' value='+' />
           </form>
-          
+
         </div>
 
         <div id='leftSomething'>
