--- a/client/index.html
+++ b/client/index.html
@@ -65,8 +65,8 @@
 
         <div id='messages' file-upload-directive>
           <div ng-repeat='item in messages track by $index'>
-            <span ng-if='!item.from'> {{ item.message }} </span>
-            <span ng-if='item.from'> {{ item.from }}: <span> {{ item.message}} </span> </span>
+            <span ng-if='!item.from' scroll-messages-directive> {{ item.message }} </span>
+            <span ng-if='item.from' scroll-messages-directive> {{ item.from }}: <span> {{ item.message}} </span> </span>
           </div>
         </div>
 
