--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     <script type='text/javascript' src='client.js'></script>
     <script type='text/javascript' src='rightSomethingDirective.js'></script>
     <script type='text/javascript' src='fileUploadDirective.js'></script>
+    <script type='text/javascript' src='roomDirective.js'></script>
 
     <link rel='stylesheet' type='text/css' href='index.css' />
 
@@ -55,7 +56,7 @@
 
           <div id='something'>
 
-            <div ng-repeat='item in rooms'>
+            <div ng-repeat='item in rooms' room-directive>
               {{ item.name }}
             </div>
 
