added select acceptfile

--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
     <script type='text/javascript' src='rightSomethingDirective.js'></script>
     <script type='text/javascript' src='fileUploadDirective.js'></script>
     <script type='text/javascript' src='roomDirective.js'></script>
+    <script type='text/javascript' src='acceptFileDirective.js'></script>
 
     <link rel='stylesheet' type='text/css' href='index.css' />
 
@@ -91,7 +92,7 @@
               <div right-something-directive> </div>
             </div>
 
-            <div ng-repeat='item in acceptFiles'>
+            <div ng-repeat='item in acceptFiles' accept-file-directive>
               <div right-something-directive> </div>
             </div>
 
