added directives folder

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
     <script type='text/javascript' src='fileUploadDirective.js'></script>
     <script type='text/javascript' src='roomDirective.js'></script>
     <script type='text/javascript' src='acceptFileDirective.js'></script>
+    <script type='text/javascript' src='usersDirective.js'></script>
+    <script type='text/javascript' src='scrollMessagesDirective.js'></script>
 
     <link rel='stylesheet' type='text/css' href='index.css' />
 
