added select connect

--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
 
             <div id='right'>
               <div id='username'>{{ tempJson.name }}</div>
-              <div id='secondBox'></div>
+              <div id='secondBox'><div id='connect' ng-click='select({"connect": ""})'></div></div>
             </div>
 
           </div>
